Various fixes for PMD happiness